refactor(web): normalize border tokens and background colors
- Remove redundant opacity on border tokens (border-border/xx → border-border)
- Replace hardcoded background colors with semantic tokens
- Update globals.css background values to match Inbox visual baseline
- Document border token usage rules in design guidelines

Affected:
- Design guide: add border token usage rules and background alignment status
- Global CSS: align --background token with #f5f5f7 (light) and #0b0b0f (dark)
- 13 component files: normalize border and background class names

This follows the established pattern: use semantic tokens for page-level
styling, reserve hardcoded colors only for local visual effects.

--- a/docs/guides/页面设计规范原则.md
+++ b/docs/guides/页面设计规范原则.md
@@ -134,6 +134,8 @@
 - 优先浅灰背景 + 白卡片 + 低对比边框（现有主风格）。
 - 强强调色仅用于关键状态（danger/warning/success）与分类语义。
 - 不引入新品牌主色，除非通过设计评审。
+- 边框 token 使用规则：`--border` / `--input` 已内置透明度，禁止再写 `border-border/70`、`border-input/60` 这类二次透明度语法。
+- 推荐写法：`border border-border`、`border border-input`；禁用写法：`border-border/70`、`border-input/50`。
 
 ### 4.5 文案与语气
 
@@ -149,7 +151,7 @@
 
 | # | 不统一点 | 当前表现 | 建议统一方向 | 状态 |
 |---|---|---|---|---|
-| 1 | 页面底色策略 | Inbox 有明确硬编码底色（`#f5f5f7` / `#0b0b0f` 等）；Category/Routing 页面容器更偏 token 继承 | Dashboard 页面优先 token，硬编码仅用于局部特效 | 已确认 |
+| 1 | 页面底色策略 | 已将 `--background` 对齐 Inbox 色值，Inbox 页面基底已切换为 token；局部特效色按需保留 | Dashboard 页面优先 token，硬编码仅用于局部特效 | 已确认（已落地） |
 | 2 | 字体气质 | Inbox 大量 `uppercase + font-black`；其他页偏常规阅读体 | 主信息统一常规字重，重装饰字重只保留局部标签 | 待确认 |
 | 3 | 卡片视觉等级 | Inbox 卡片、Category/Routing grid 卡片圆角与阴影体系不同 | 统一卡片等级（基础卡/强调卡）并复用 class 组合 | 待确认 |
 | 4 | 列表形态 | Category list 是 Table；Routing list 是分段条目 | 定义“数据表型”和“规则条目型”两种合法列表模板 | 待确认 |
@@ -162,20 +164,20 @@
 
 当前 token 基准（来自全局变量）：
 
-- 浅色背景：`--background: 0 0% 96%`（约等于 `#f5f5f5`）
-- 深色背景：`--background: 240 20% 4%`（约等于 `#08080c`）
+- 浅色背景：`--background: 240 11% 96.5%`（对齐 `#f5f5f7`）
+- 深色背景：`--background: 240 15% 5.1%`（对齐 `#0b0b0f`）
 
-Inbox 现有硬编码底色（示例）：
+Inbox 页面基底已切换到 token（示例）：
 
-- 页面根容器：`bg-[#f5f5f7] dark:bg-[#0b0b0f]`
-- 顶部区域：`dark:bg-[#0b0b0f]/50`
-- 结果区域：`dark:bg-[#0b0b0f]/40`
+- 页面根容器：`bg-background`
+- 顶部区域：`bg-card/70 dark:bg-background/50`
+- 结果区域：`bg-muted/20 dark:bg-background/40`
 
 结论：
 
-- Inbox 的底色硬编码和 token 语义色“接近但不完全相同”，不建议继续在页面内重复硬编码。
-- Category/Routing 的页面容器不主动写死底色，更多继承布局层 `bg-background/*`，因此一致性更高。
-- 统一原则确定为：页面基底使用 token（`bg-background`/`bg-background/*`），硬编码仅保留在局部视觉特效层（如拖拽遮罩、调试状态块等）。
+- 页面基底色已统一到 token，并与 Inbox 视觉基准保持一致。
+- Category/Routing 与 Inbox 的页面级背景语义已对齐（都应走 `bg-background` 体系）。
+- 统一原则保持不变：页面基底使用 token（`bg-background`/`bg-background/*`），硬编码仅保留在局部视觉特效层（如拖拽遮罩、调试状态块等）。
 
 ---
 
@@ -185,6 +187,7 @@ Inbox 现有硬编码底色（示例）：
 
 - [ ] 页面骨架采用本规范 4.1 模板或说明偏离原因。
 - [ ] 颜色/边框/阴影优先 token，不新增无依据硬编码色。
+- [ ] 不使用 `border-border/xx`、`border-input/xx` 这类二次透明度写法。
 - [ ] 具备 loading / empty / success / error 四类状态。
 - [ ] 交互控件复用现有 UI 组件（Button、Card、Dialog、Select、Switch 等）。
 - [ ] 移动端可用（关键操作可触达，布局不破）。
