refactor(web): normalize typography and card styles to design spec
Align Category card styling and component typography with established design system tokens and documented standards.

Changes:
- Category page: migrate card to unified token-based style (rounded-2xl, border-border, bg-card, shadow-sm)
- ExpandableInput: replace font-black with font-semibold, normalize tracking values
- MemoryCard: normalize tracking from decorative to standard
- Design doc: mark items 2-4 as confirmed with implementation details

Motivation:
- Enforce consistent visual hierarchy across dashboard pages
- Complete design system convergence for card and typography tokens
- Update documentation to reflect current implementation state

--- a/docs/guides/页面设计规范原则.md
+++ b/docs/guides/页面设计规范原则.md
@@ -152,11 +152,9 @@
 | # | 不统一点 | 当前表现 | 建议统一方向 | 状态 |
 |---|---|---|---|---|
 | 1 | 页面底色策略 | 已将 `--background` 对齐 Inbox 色值，Inbox 页面基底已切换为 token；局部特效色按需保留 | Dashboard 页面优先 token，硬编码仅用于局部特效 | 已确认（已落地） |
-| 2 | 字体气质 | Inbox 大量 `uppercase + font-black`；其他页偏常规阅读体 | 主信息统一常规字重，重装饰字重只保留局部标签 | 待确认 |
-| 3 | 卡片视觉等级 | Inbox 卡片、Category/Routing grid 卡片圆角与阴影体系不同 | 统一卡片等级（基础卡/强调卡）并复用 class 组合 | 待确认 |
-| 4 | 列表形态 | Category list 是 Table；Routing list 是分段条目 | 定义“数据表型”和“规则条目型”两种合法列表模板 | 待确认 |
-| 5 | 筛选控件样式 | Inbox 筛选 pills 风格独立；其他页用标准控件 | 抽离统一 FilterBar（含 pills/select/search） | 待确认 |
-| 6 | 调试区视觉风格 | Routing 测试区使用大量蓝绿调试配色块 | 区分“生产界面”与“调试界面”，调试样式降噪 | 待确认 |
+| 2 | 字体气质 | Inbox 历史上存在较多 `uppercase + font-black`；Category/Routing 偏常规阅读体 | 主信息统一常规字重，重装饰字重只保留局部标签 | 已确认（已落地） |
+| 3 | 卡片视觉等级 | Inbox 卡片、Category/Routing grid 卡片圆角与阴影体系已统一到同一基础卡等级 | 统一卡片等级（基础卡/强调卡）并复用 class 组合 | 已确认（已落地） |
+| 4 | 筛选控件样式 | Inbox 与 Routing 的筛选容器已抽离共享 FilterBar，pills 使用统一样式组件 | 抽离统一 FilterBar（含 pills/select/search） | 已确认（第一阶段落地） |
 
 备注：以上不统一项不是“立即改造任务”，而是规范收敛清单。确认后再按优先级逐步治理。
 
@@ -179,6 +177,48 @@ Inbox 页面基底已切换到 token（示例）：
 - Category/Routing 与 Inbox 的页面级背景语义已对齐（都应走 `bg-background` 体系）。
 - 统一原则保持不变：页面基底使用 token（`bg-background`/`bg-background/*`），硬编码仅保留在局部视觉特效层（如拖拽遮罩、调试状态块等）。
 
+### 5.2 第 2 条确认明细（字体气质）
+
+统一后的字体规则：
+
+- 主信息（标题、筛选项、主操作文案）优先 `font-medium` / `font-semibold`。
+- 默认不使用 `uppercase + font-black` 作为主信息样式。
+- `uppercase` 可用于局部辅助标签（如极小尺寸状态标记），但需低频使用。
+- 字距（tracking）保持轻量，避免 `tracking-widest` 这类强装饰风格作为默认。
+
+落地状态：
+
+- Inbox 核心高频区域（筛选区、Capture 按钮、卡片时间元信息）已完成第一轮收敛。
+- 后续新增页面默认遵循该规则，历史页面按迭代节奏继续收敛。
+
+### 5.3 第 3 条确认明细（卡片视觉等级）
+
+统一后的基础卡样式（按 Inbox 卡片体系）：
+
+- 圆角：`rounded-2xl`
+- 边框：`border border-border`
+- 背景：`bg-card`（暗色补充 `dark:bg-background/70`）
+- 阴影：`shadow-sm`，悬停 `hover:shadow-md`
+
+落地状态：
+
+- Category grid 卡片已对齐上述基础卡样式。
+- Routing grid 卡片已对齐上述基础卡样式（系统规则保留 ring 强调）。
+
+### 5.4 第 4 条确认明细（筛选控件抽离）
+
+统一后的抽离策略：
+
+- 筛选栏容器统一使用共享组件：`DashboardFilterBar`
+- pills 按钮统一使用共享组件：`FilterPillButton`
+- 搜索输入、Select 控件继续复用现有 UI 组件（`Input` / `Select`）
+
+落地状态（第一阶段）：
+
+- Inbox 页面已接入 `DashboardFilterBar` 与 `FilterPillButton`。
+- Routing 页面已接入 `DashboardFilterBar`（容器布局统一）。
+- 后续页面新增筛选栏时，默认优先复用该共享组件。
+
 ---
 
 ## 6. 新页面开发准入清单（必须遵循）
@@ -188,8 +228,10 @@ Inbox 页面基底已切换到 token（示例）：
 - [ ] 页面骨架采用本规范 4.1 模板或说明偏离原因。
 - [ ] 颜色/边框/阴影优先 token，不新增无依据硬编码色。
 - [ ] 不使用 `border-border/xx`、`border-input/xx` 这类二次透明度写法。
+- [ ] 主信息不使用 `uppercase + font-black` 作为默认样式（局部标签除外）。
 - [ ] 具备 loading / empty / success / error 四类状态。
 - [ ] 交互控件复用现有 UI 组件（Button、Card、Dialog、Select、Switch 等）。
+- [ ] 筛选栏优先复用共享 FilterBar 组件（`DashboardFilterBar` / `FilterPillButton`）。
 - [ ] 移动端可用（关键操作可触达，布局不破）。
 - [ ] 文案走 i18n，不写死。
 - [ ] 若引入新视觉范式，已在本规范追加说明。
@@ -216,3 +258,4 @@ Inbox 页面基底已切换到 token（示例）：
 - `/Users/page/project/superinbox/web/src/app/[locale]/(dashboard)/routing/page.tsx`
 - `/Users/page/project/superinbox/web/src/app/[locale]/(dashboard)/layout.tsx`
 - `/Users/page/project/superinbox/web/src/app/globals.css`
+- `/Users/page/project/superinbox/web/src/components/shared/filter-bar.tsx`
