feat: polish inbox detail header and save feedback

--- a/docs/guides/页面设计规范原则.md
+++ b/docs/guides/页面设计规范原则.md
@@ -71,6 +71,7 @@
 - 布尔状态优先使用 `Switch`（列表状态开关统一）。
 - 多选项筛选优先使用 `Select` 或可复用的 pills 组件，不重复造轮子。
 - 删除操作统一放在次级菜单（`DropdownMenu`）并使用 destructive 语义色。
+- 页面头部/工具条中的操作按钮组（如“分类、编辑、属性、更多”）统一右对齐；移动端与桌面端保持同一对齐策略。
 
 ### 3.5 状态反馈统一
 
@@ -231,6 +232,7 @@ Inbox 页面基底已切换到 token（示例）：
 - [ ] 主信息不使用 `uppercase + font-black` 作为默认样式（局部标签除外）。
 - [ ] 具备 loading / empty / success / error 四类状态。
 - [ ] 交互控件复用现有 UI 组件（Button、Card、Dialog、Select、Switch 等）。
+- [ ] 页面头部/工具条中的操作按钮组统一靠右放置（桌面端与移动端一致）。
 - [ ] 筛选栏优先复用共享 FilterBar 组件（`DashboardFilterBar` / `FilterPillButton`）。
 - [ ] 移动端可用（关键操作可触达，布局不破）。
 - [ ] 文案走 i18n，不写死。
